@@ -1,3 +1,7 @@
+2010-06-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* libtiff 3.9.4 released.
+
 2010-06-13  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_jpeg.c: avoid re-preparing jpeg tables unnecessarily
